--- a/Task 5/src/main/resources/templates/index.html
+++ b/Task 5/src/main/resources/templates/index.html
@@ -55,11 +55,12 @@
         <td th:text="${t.prizePool}"></td>
         <td th:text="${t.sportId}"></td>
         <td>
-            <a th:href="@{/delete/{id}(id=${t.id})}">❌ Видалити</a>
+            <a th:href="@{/delete/{id}(id=${t.id})}">Видалити</a>
         </td>
     </tr>
     </tbody>
 </table>
 
 </body>
+
 </html>
